# cagok

./: API_SPEC.md  API_TYPES.md  GEMINI.md  README.md  components.json  package-lock.json  package.json  refactor.cjs  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: index.html  privacy.html
src/: App.css  App.tsx  TitleBar.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  window.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  category.rs  dashboard.rs  db.rs  mod.rs  onedrive.rs  recurring.rs  settings.rs  transaction.rs
src-tauri/src/db/: backup.rs  connection.rs  init.rs  mod.rs  models.rs  repository.rs
src-tauri/src/services/: dashboard.rs  mod.rs  onedrive.rs  recurring.rs
src/components/: AnimatedAmount.tsx  AnimatedTabs.tsx  CagokIcon.tsx  CategoryForm.tsx  CategoryIcon.tsx  ComparisonCardFooter.tsx  ConfirmDialog.tsx  CoutUp.tsx  DailyExpenseCalendar.tsx  DailyTransactionsDialog.tsx  DinamicBreadcrumb.tsx  DotNavigation.tsx  EmptyState.tsx  FinanceModeRounded.tsx  FinkroIcon.tsx  MonthYearPicker.tsx  NotificationBell.tsx  SyncNotifier.tsx  TransactionForm.tsx  YearPicker.tsx  app-sidebar.tsx  main-nav.tsx
src/db/: database.ts  dummyData.ts  seed.ts
src/hooks/: useAutoBackupNotification.ts  useCurrencyFormatter.tsx  useDashboard.ts  useDateFormatter.tsx  useRecurringListener.ts
src/lib/: utils.ts  window.ts
src/pages/: About.tsx  CategoriesPage.tsx  CategorySettings.tsx  DashboardPage.tsx  (+10 more)
(+129 files in other folders)
