[package]
name = "Cagok"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cagok_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.24.0"
rusqlite = { version = "0.31.0", features = ["serde_json", "bundled"] }
tauri-plugin-sql = {version ="2.3.1", features= ["sqlite"] }
chrono = "0.4.42"
csv = "1.3"
tauri-plugin-fs = "2"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
rust_xlsxwriter = "0.93"

